changed navbar icon color.  fixed spacing.  fixed mobile. added hover coor to match with other icons

--- a/style.css
+++ b/style.css
@@ -25,13 +25,37 @@ body {
 }
 
 .navbar-social-media {
-    display: inline-block;
+    display: block;
+    float: left;
+    margin-bottom: 0px;
+
 }
 
 .navbar-social-media li {
     display: inline;
-    color: #ffffff;
+    padding: 8px;
 }
+
+.navbar-social-media li a {
+    color: rgba(255,255,255,.5);
+}
+.navbar-social-media li a:hover {
+    color:rgba(255,255,255,.75);
+}
+
+@media(max-width: 767px){
+    .nav-link, .navbar-social-media {
+        float: left!important;
+    }
+    .navbar-social-media li {
+        display: inline-block;
+        width: 100%
+    }
+    .navbar-social-media {
+        padding-left: 0px;
+    }
+}
+
 
 /*IMAGE TOP
 ___________________________________________________*/
